[tool.poetry]
name = "tunneltop"
version = "0.3.6"
description = "A top-like tunnel manager"
authors = ["terminaldweller <devi@terminaldweller.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/terminaldweller/tunneltop"
repository = "https://github.com/terminaldweller/tunneltop"
keywords = ["tunnel","top","ssh"]
classifiers = [
    "Environment :: Console",
]
include = [
    "LICENSE",
]
packages = [
{include = "tunneltop"}
]

[tool.poetry.scripts]
tunneltop = "tunneltop.tunneltop:main"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
