[tool.poetry]
name = "tunneltop"
version = "0.4.5"
description = "A top-like tunnel manager"
authors = ["terminaldweller <devi@terminaldweller.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/terminaldweller/tunneltop"
repository = "https://github.com/terminaldweller/tunneltop"
keywords = ["tunnel","top","ssh"]
classifiers = [
    "Environment :: Console",
]
include = [
    "LICENSE",
]
packages = [
{include = "tunneltop"}
]

[tool.poetry.scripts]
tunneltop = "tunneltop.tunneltop:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
openai = "^1.31.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
bandit = "^1.7.8"
black = "^24.4.2"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
profile = "black"
target-version = "py311"
unfixable = ["B", "SIM", "TRY", "RUF"]
